# multi-paxos-rs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: clippy.yml
benches/: main.rs
examples/: key_value_store.rs
proptest-regressions/: lib.txt
src/: lib.rs  network.rs  protocol.rs  replica.rs  storage.rs  udp_network.rs
tests/: consistency.rs
