[package]
name = "paxos"
version = "0.1.0"
authors = ["Quentin M. Kniep"]
edition = "2018"
description = "Multi-Paxos replicated log in Rust"
readme = "README.md"
homepage = "https://quentinkniep.com"
repository = "https://github.com/qkniep/multi-paxos-rs"
license = "MIT"
keywords = ["paxos", "multi-paxos", "consensus", "distributed-systems", "replicated-log"]
categories = ["algorithms", "database-implementations"]

[dependencies]
bincode = "1"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }

[dependencies.tracing-subscriber]
version = "0.2"
default-features = false
features = ["fmt", "ansi", "chrono"]

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"

[[bench]]
name = "main"
harness = false
